--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
 "אעבלין": "רויטל",
 "שעב": "רויטל",
 "טירת הכרמל": "רויטל",
-"ינוח ג'ת": "רויטל",
+"ינוח ג'ת": "נסרין",
 "כאוכב": "רויטל",
 "כבול": "רויטל",
 "מזרעה": "רויטל",
-"מ.א.מטה אשר": "רויטל",
+"מטה אשר": "רויטל",
 "נהריה": "רויטל",
 "נשר": "רויטל",
 "עוספייה": "רויטל",
 "עכו": "רויטל",
 "פרדס חנה": "רויטל",
 "קרית טבעון": "רויטל",
-"רכסים": "רויטל",
-"מ.א. זבולון": "רויטל",
+"רכסים": "רויטל","
+    "זבולון": "רויטל",
 "רמת ישי": "רויטל",
 "אבו סנאן": "רנדה",
 "ביר אל מכסור": "רנדה",
@@ -231,7 +231,7 @@
 "יפיע": "גרציאלה",
 "כעביה טבאש": "גרציאלה",
 "כפר כנא": "גרציאלה",
-"מטולה": "גרציאלה",
+"מטולה": "נסרין",
 "משהד": "גרציאלה",
 "נוף הגליל": "גרציאלה",
 "נצרת": "גרציאלה",
