--- a/index.html
+++ b/index.html
@@ -122,190 +122,189 @@
             "סביון": "סיגל",
             "חבל יבנה": "סיגל",
             "לוד": "סיגל",
-"בוקעתא": "נסרין",
-"גוש חלב": "נסרין",
-"גליל עליון": "נסרין",
-"חורפיש": "נסרין",
-"טובא זנגריה": "נסרין",
-"כפר הורדים": "נסרין",
-"מג'דל שמס": "נסרין",
-"מסעדה": "נסרין",
-"מעלות תרשיחא": "נסרין",
-"מרום הגליל": "נסרין",
-"מרר": "נסרין",
-"סאג'ור": "נסרין",
-"עג'אר": "נסרין",
-"עין קניה": "נסרין",
-"פסוטה": "נסרין",
-"פקיעין": "נסרין",
-"קרית שמונה": "נסרין",
-"ראמה": "נסרין",
-"בענה": "נסרין",
-"מגד אלכרום": "נסרין",
-"נחף": "נסרין",
-"אום אל פחם": "עירית",
-"אור עקיבא": "עירית",
-"אלונה": "עירית",
-"באקה אל גרביה": "עירית",
-"בסמה": "עירית",
-"ג'סר אל זרקא": "עירית",
-"ג'ת": "עירית",
-"זכרון יעקב": "עירית",
-"חדרה": "עירית",
-"חוף הכרמל": "עירית",
-"כפר קרע": "עירית",
-"מנשה": "עירית",
-"מעלה עירון": "עירית",
-"חריש": "עירית",
-"ערערה": "עירית",
-"פרדיס": "עירית",
-"יוקנעם": "עירית",
-"מגידו": "עירית",
-"יזרעאל": "עירית",
-"טבריה": "רויטל",
-"בנימינה-גבעת עדה": "רויטל",
-"דלית אל כרמל": "רויטל",
-"אעבלין": "רויטל",
-"שעב": "רויטל",
-"טירת הכרמל": "רויטל",
-"ינוח ג'ת": "נסרין",
-"כאוכב": "רויטל",
-"כבול": "רויטל",
-"מזרעה": "רויטל",
-"מטה אשר": "רויטל",
-"נהריה": "רויטל",
-"נשר": "רויטל",
-"עוספייה": "רויטל",
-"עכו": "רויטל",
-"פרדס חנה": "רויטל",
-"קרית טבעון": "רויטל",
-"רכסים": "רויטל","
-    "זבולון": "רויטל",
-"רמת ישי": "רויטל",
-"אבו סנאן": "רנדה",
-"ביר אל מכסור": "רנדה",
-"בית ג'אן": "רנדה",
-"ג'דידה מכר": "רנדה",
-"ג'וליס": "רנדה",
-"דיר חנא": "רנדה",
-"חיפה": "רנדה",
-"טמרה": "רנדה",
-"כסרא סמיע": "רנדה",
-"כפר יאסיף": "רנדה",
-"כפר מנדא": "רנדה",
-"מעיליה": "רנדה",
-"מעלה יוסף": "רנדה",
-"משגב": "רנדה",
-"סכנין": "רנדה",
-"עראבה": "רנדה",
-"קרית אתא": "רנדה",
-"קרית ביאליק": "רנדה",
-"ירכא": "רנדה",
-"קרית ים": "רנדה",
-"קרית מוצקין": "רנדה",
-"שלומי": "רנדה",
-"שפרעם": "רנדה",
-"צפת": "רנדה",
-"בוסתן אל מרג'": "תמי",
-"גלבוע": "תמי",
-"אכסאל": "תמי",
-"אל בטוף": "תמי",
-"בועיינה נוג'ידאת": "תמי",
-"בית שאן": "תמי",
-"גליל תחתון": "תמי",
-"דבוריה": "תמי",
-"טורעאן": "תמי",
-"יבניאל": "תמי",
-"כפר קמא": "תמי",
-"כפר תבור": "תמי",
-"מגדל": "תמי",
-"עילבון": "תמי",
-"עמק הירדן": "תמי",
-"עמק המעיינות": "תמי",
-"שיבלי": "תמי",
-"מגדל העמק": "תמי",
-"בסמת טבעון": "גרציאלה",
-"זרזיר": "גרציאלה",
-"חצור הגלילית": "גרציאלה",
-"יסוד המעלה": "גרציאלה",
-"יפיע": "גרציאלה",
-"כעביה טבאש": "גרציאלה",
-"כפר כנא": "גרציאלה",
-"מטולה": "נסרין",
-"משהד": "גרציאלה",
-"נוף הגליל": "גרציאלה",
-"נצרת": "גרציאלה",
-"עילוט": "גרציאלה",
-"עין מאהל": "גרציאלה",
-"עפולה": "גרציאלה",
-"ראש פינה": "גרציאלה",
-"ריינה": "גרציאלה",
-"דיר אלאסד": "גרציאלה",
-"כרמיאל": "גרציאלה",
-"מבואות חרמון": "גרציאלה",
-"גולן": "גרציאלה",
-"קצרין": "גרציאלה",
-"ירושלים": "תקווה",
-"בית שמש": "תקווה",
-"גבעת זאב": "תקווה",
-"מטה בנימין": "תקווה",
-"מבשרת ציון": "גילה",
-"אבו גוש": "גילה",
-"הר אדר": "גילה",
-"קריית יערים": "גילה",
-"יואב": "גילה",
-"לכיש": "גילה",
-"באר טוביה": "גילה",
-"שפיר": "גילה",
-"אשקלון": "גילה",
-"קריית מלאכי": "גילה",
-"אשדוד": "גילה",
-"קריית ארבע": "נגה",
-"מעלה אפרים": "נגה",
-"מעלה אדומים": "נגה",
-"הר חברון": "נגה",
-"גוש עציון": "נגה",
-"בקעת הירדן": "נגה",
-"מגילות": "נגה",
-"בית אל": "נגה",
-"חברון": "נגה",
-"ביתר עילית": "נגה",
-"מטה יהודה": "נגה",
-"מודיעין עילית": "נגה",
-"אפרת": "נגה",
-"אילת": "ענת",
-"נתיבות": "ענת",
-"רהט": "ענת",
-"שדרות": "ענת",
-"חורה": "ענת",
-"אילות": "ענת",
-"נגב": "ענת",
-"מרחבים": "ענת",
-"חוף אשקלון": "ענת",
+            "בוקעתא": "נסרין",
+            "גוש חלב": "נסרין",
+            "גליל עליון": "נסרין",
+            "חורפיש": "נסרין",
+            "טובא זנגריה": "נסרין",
+            "כפר הורדים": "נסרין",
+            "מג'דל שמס": "נסרין",
+            "מסעדה": "נסרין",
+            "מעלות תרשיחא": "נסרין",
+            "מרום הגליל": "נסרין",
+            "מרר": "נסרין",
+            "סאג'ור": "נסרין",
+            "עג'אר": "נסרין",
+            "עין קניה": "נסרין",
+            "פסוטה": "נסרין",
+            "פקיעין": "נסרין",
+            "קרית שמונה": "נסרין",
+            "ראמה": "נסרין",
+            "בענה": "נסרין",
+            "מגד אלכרום": "נסרין",
+            "נחף": "נסרין",
+            "אום אל פחם": "עירית",
+            "אור עקיבא": "עירית",
+            "אלונה": "עירית",
+            "באקה אל גרביה": "עירית",
+            "בסמה": "עירית",
+            "ג'סר אל זרקא": "עירית",
+            "ג'ת": "עירית",
+            "זכרון יעקב": "עירית",
+            "חדרה": "עירית",
+            "חוף הכרמל": "עירית",
+            "כפר קרע": "עירית",
+            "מנשה": "עירית",
+            "מעלה עירון": "עירית",
+            "חריש": "עירית",
+            "ערערה": "עירית",
+            "פרדיס": "עירית",
+            "יוקנעם": "עירית",
+            "מגידו": "עירית",
+            "יזרעאל": "עירית",
+            "טבריה": "רויטל",
+            "בנימינה-גבעת עדה": "רויטל",
+            "דלית אל כרמל": "רויטל",
+            "אעבלין": "רויטל",
+            "שעב": "רויטל",
+            "טירת הכרמל": "רויטל",
+            "ינוח ג'ת": "נסרין",
+            "כאוכב": "רויטל",
+            "כבול": "רויטל",
+            "מזרעה": "רויטל",
+            "מטה אשר": "רויטל",
+            "נהריה": "רויטל",
+            "נשר": "רויטל",
+            "עוספייה": "רויטל",
+            "עכו": "רויטל",
+            "פרדס חנה": "רויטל",
+            "קרית טבעון": "רויטל",
+            "רכסים": "רויטל",
+            "זבולון": "רויטל",
+            "רמת ישי": "רויטל",
+            "אבו סנאן": "רנדה",
+            "ביר אל מכסור": "רנדה",
+            "בית ג'אן": "רנדה",
+            "ג'דידה מכר": "רנדה",
+            "ג'וליס": "רנדה",
+            "דיר חנא": "רנדה",
+            "חיפה": "רנדה",
+            "טמרה": "רנדה",
+            "כסרא סמיע": "רנדה",
+            "כפר יאסיף": "רנדה",
+            "כפר מנדא": "רנדה",
+            "מעיליה": "רנדה",
+            "מעלה יוסף": "רנדה",
+            "משגב": "רנדה",
+            "סכנין": "רנדה",
+            "עראבה": "רנדה",
+            "קרית אתא": "רנדה",
+            "קרית ביאליק": "רנדה",
+            "ירכא": "רנדה",
+            "קרית ים": "רנדה",
+            "קרית מוצקין": "רנדה",
+            "שלומי": "רנדה",
+            "שפרעם": "רנדה",
+            "צפת": "רנדה",
+            "בוסתן אל מרג'": "תמי",
+            "גלבוע": "תמי",
+            "אכסאל": "תמי",
+            "אל בטוף": "תמי",
+            "בועיינה נוג'ידאת": "תמי",
+            "בית שאן": "תמי",
+            "גליל תחתון": "תמי",
+            "דבוריה": "תמי",
+            "טורעאן": "תמי",
+            "יבניאל": "תמי",
+            "כפר קמא": "תמי",
+            "כפר תבור": "תמי",
+            "מגדל": "תמי",
+            "עילבון": "תמי",
+            "עמק הירדן": "תמי",
+            "עמק המעיינות": "תמי",
+            "שיבלי": "תמי",
+            "מגדל העמק": "תמי",
+            "בסמת טבעון": "גרציאלה",
+            "זרזיר": "גרציאלה",
+            "חצור הגלילית": "גרציאלה",
+            "יסוד המעלה": "גרציאלה",
+            "יפיע": "גרציאלה",
+            "כעביה טבאש": "גרציאלה",
+            "כפר כנא": "גרציאלה",
+            "מטולה": "נסרין",
+            "משהד": "גרציאלה",
+            "נוף הגליל": "גרציאלה",
+            "נצרת": "גרציאלה",
+            "עילוט": "גרציאלה",
+            "עין מאהל": "גרציאלה",
+            "עפולה": "גרציאלה",
+            "ראש פינה": "גרציאלה",
+            "ריינה": "גרציאלה",
+            "דיר אלאסד": "גרציאלה",
+            "כרמיאל": "גרציאלה",
+            "מבואות חרמון": "גרציאלה",
+            "גולן": "גרציאלה",
+            "קצרין": "גרציאלה",
+            "ירושלים": "תקווה",
+            "בית שמש": "תקווה",
+            "גבעת זאב": "תקווה",
+            "מטה בנימין": "תקווה",
+            "מבשרת ציון": "גילה",
+            "אבו גוש": "גילה",
+            "הר אדר": "גילה",
+            "קריית יערים": "גילה",
+            "יואב": "גילה",
+            "לכיש": "גילה",
+            "באר טוביה": "גילה",
+            "שפיר": "גילה",
+            "אשקלון": "גילה",
+            "קריית מלאכי": "גילה",
+            "אשדוד": "גילה",
+            "קריית ארבע": "נגה",
+            "מעלה אפרים": "נגה",
+            "מעלה אדומים": "נגה",
+            "הר חברון": "נגה",
+            "גוש עציון": "נגה",
+            "בקעת הירדן": "נגה",
+            "מגילות": "נגה",
+            "בית אל": "נגה",
+            "חברון": "נגה",
+            "ביתר עילית": "נגה",
+            "מטה יהודה": "נגה",
+            "מודיעין עילית": "נגה",
+            "אפרת": "נגה",
+            "אילת": "ענת",
+            "נתיבות": "ענת",
+            "רהט": "ענת",
+            "שדרות": "ענת",
+            "חורה": "ענת",
+            "אילות": "ענת",
+            "נגב": "ענת",
+            "מרחבים": "ענת",
+            "חוף אשקלון": "ענת",
 "בני שמעון": "ענת",
-"שער הנגב": "ענת",
-"אשכול": "ענת",
-"אל קאסום": "ענת",
-"אופקים": "ענת",
-"באר שבע": "איילת",
-"קריית גת": "איילת",
-"תל שבע": "איילת",
-"דימונה": "סנדרה",
-"מצפה רמון": "סנדרה",
-"ירוחם": "סנדרה",
-"מיתר": "סנדרה",
-"להבים": "סנדרה",
-"עומר": "סנדרה",
-"ערערה": "סנדרה",
-"לקייה": "סנדרה",
-"שגב שלום": "סנדרה",
-"כסייפה": "סנדרה",
-"נווה מדבר": "סנדרה",
-"מ.א ערבה": "סנדרה",
-"רמת נגב": "סנדרה",
-"תמר": "סנדרה",
-"ערד": "סנדרה"
-
+            "שער הנגב": "ענת",
+            "אשכול": "ענת",
+            "אל קאסום": "ענת",
+            "אופקים": "ענת",
+            "באר שבע": "איילת",
+            "קריית גת": "איילת",
+            "תל שבע": "איילת",
+            "דימונה": "סנדרה",
+            "מצפה רמון": "סנדרה",
+            "ירוחם": "סנדרה",
+            "מיתר": "סנדרה",
+            "להבים": "סנדרה",
+            "עומר": "סנדרה",
+            "ערערה בנגב": "סנדרה",
+            "לקייה": "סנדרה",
+            "שגב שלום": "סנדרה",
+            "כסייפה": "סנדרה",
+            "נווה מדבר": "סנדרה",
+            "ערבה תיכונה": "סנדרה",
+            "רמת נגב": "סנדרה",
+            "תמר": "סנדרה",
+            "ערד": "סנדרה"
         };
 
         function searchInspector() {
